[package]
name = "pd-interceptor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pd-interceptor"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
test = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-stm32 = { version =  "0.2", features = ["memory-x", "stm32f103c8", "time-driver-any", "exti", "unstable-pac"] }
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]  }
embassy-time = "0.4"
embedded-hal = "1.0"
embedded-hal-async = "1.0"

defmt = "1.0"
defmt-rtt = "1.0"

fusb302b = { path = "../fusb302b" }
usb-pd = { path = "../usb-pd" }
panic-probe = { version = "1.0", features = ["print-defmt"] }
aht20-async = "1.0"

uom = { version = "0.36", default-features = false, features = ["si"] }
